<resources>
    <string name="app_name">First Input</string>
    <string name="quantity">Quantity</string>
    <string name="unit">0</string>
    <string name="price">0</string>
    <string name="orderSummary">Order Summary</string>
    <string name="submit">Submit</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="toppChocolate">Chocolate</string>
    <string name="top_whipped_cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="name_hint">Name</string>
    <string name="thank_You">Thank You</string>
</resources>
